Commit des modifications locales

--- a/templates/actualite_politique/actualite_politique.html.twig
+++ b/templates/actualite_politique/actualite_politique.html.twig
@@ -1,11 +1,13 @@
-{# templates/actualite_politique/actualite_politique.html.twig #}
+{% extends 'base.html.twig' %}
 
-<h1>Actualité Politique Mondiale</h1>
+{% block body %}
+    <h1>Actualité Politique Mondiale</h1>
 
-<ul>
-    {% for actualite in actualites %}
-        <li>{{ actualite.titre }}</li>
-        <p>{{ actualite.contenu }}</p>
-        <hr>
-    {% endfor %}
-</ul>
+    <ul>
+        {% for actualite in actualites %}
+            <li>{{ actualite.titre }}</li>
+            <p>{{ actualite.contenu }}</p>
+            <hr>
+        {% endfor %}
+    </ul>
+{% endblock %}
