--- a/templates/actualite_politique/actualite_politique.html.twig
+++ b/templates/actualite_politique/actualite_politique.html.twig
@@ -94,5 +94,16 @@
                 <!-- Plus de liens vers d'autres articles -->
             </ul>
         </aside>
+        <aside>
+            <!-- Contenu de la barre latérale, par exemple des liens vers d'autres articles ou une liste de tags -->
+            <h3>Articles Récents</h3>
+            <ul>
+                <li><a href="#">Article 1</a></li>
+                <li><a href="#">Article 2</a></li>
+                <li><a href="#">Article 3</a></li>
+                <!-- Plus de liens vers d'autres articles -->
+            </ul>
+        </aside>
+
     </main>
 {% endblock %}
