--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,21 +10,29 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="{{ path('accueil') }}">
-        <img src="{{ asset('images/logo.png') }}" alt="Votre Logo" class="logo img-fluid" style="max-width: 200px; max-height: 100px;">
+    <a class="navbar-brand" href="/">
+        <img src="/path/to/your/logo.png" width="30" height="30" alt="Logo">
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item {% if app.request.attributes.get('_route') == 'accueil' %}active{% endif %}">
-                <a class="nav-link" href="{{ path('accueil') }}">Accueil <span class="sr-only">(current)</span></a>
+            <li class="nav-item">
+                <a class="nav-link" href="/">Accueil</a>
             </li>
-            <li class="nav-item {% if app.request.attributes.get('_route') == 'actualite_politique' %}active{% endif %}">
-                <a class="nav-link" href="{{ path('actualite_politique') }}">Actualités Politiques</a>
-            </li>
-            <!-- Ajoutez d'autres éléments du menu au besoin -->
+            {% if app.user %}
+                <li class="nav-item">
+                    <a class="nav-link">{{ app.user.email }}</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a>
+                </li>
+            {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_login') }}">Connexion</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="http://localhost:8001/register">Inscription</a>
+                </li>
+            {% endif %}
         </ul>
     </div>
 </nav>
