--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="{{ path('app_login') }}">Connexion</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="http://localhost:8001/register">Inscription</a>
+                    <a class="nav-link" href="register">Inscription</a>
                 </li>
             {% endif %}
         </ul>
